--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,14 +15,14 @@ set(CMAKE_CXX_MODULE_STD ON)
 # 各种JSON库，不需要的可以删除
 # find_package(your_package_name CONFIG REQUIRED)
 find_package(mysvac-jsonlib CONFIG REQUIRED)
-# find_package(RapidJSON CONFIG REQUIRED)
-# find_package(jsoncpp CONFIG REQUIRED)
+find_package(RapidJSON CONFIG REQUIRED)
+find_package(jsoncpp CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 # find_package(Qt6 REQUIRED COMPONENTS Core)
 # find_package(Boost REQUIRED COMPONENTS json)
 
 ###################################################
-add_subdirectory(cmake/vct-tools-json)
+add_subdirectory(3rdparty/vct-tools-json-0.7.0)
 # cpp files
 file(GLOB_RECURSE cxx_module_files ${CMAKE_CURRENT_SOURCE_DIR}/modules/*.ixx)
 file(GLOB_RECURSE cxx_header_files ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)
@@ -45,8 +45,8 @@ target_compile_definitions(main PRIVATE PROJECT_JSONFILE_PATH="${CMAKE_CURRENT_S
 # 不需要的可以删除
 # target_link_libraries(main PRIVATE your_lib_name)
 target_link_libraries(main PRIVATE mysvac::jsonlib)
-# target_link_libraries(main PRIVATE rapidjson)
-# target_link_libraries(main PRIVATE JsonCpp::JsonCpp)
+target_link_libraries(main PRIVATE rapidjson)
+target_link_libraries(main PRIVATE JsonCpp::JsonCpp)
 target_link_libraries(main PRIVATE nlohmann_json::nlohmann_json)
 # target_link_libraries(main PRIVATE Qt6::Core)
 # target_link_libraries(main PRIVATE Boost::json)
